tests/paczka1/fuzzy1/24729471.err
Error in line 2: S446 S446 43,2
Error in line 12: dnOlWzRjI S446 40,1
Error in line 18: WJXm9bkAjq S520 -2,0
Error in line 14: WJXm9bkAjq S520 99,4
Error in line 10: NiHRkW A852 14,0
Error in line 29: dnOlWzRjI S446 61,1
